--- a/HitomiScrollViewerApp/Strings/en-US/SearchPage/TagFilterSetEditor.resw
+++ b/HitomiScrollViewerApp/Strings/en-US/SearchPage/TagFilterSetEditor.resw
@@ -135,7 +135,7 @@
   <data name="Notification_Selected_TagFilterSets_Empty_Title" xml:space="preserve">
     <value>All of the selected tag filter sets are empty.</value>
   </data>
-  <data name="AutoSaveCheckBox_Content" xml:space="preserve">
+  <data name="AutoSaveCheckBox_Text" xml:space="preserve">
     <value>Auto Save Tag Filters</value>
   </data>
   <data name="PairedTFSSelector_Subtitle_Exclude" xml:space="preserve">
