--- a/HitomiScrollViewerApp/Strings/ko-KR/SearchPage/TagFilterSetEditor.resw
+++ b/HitomiScrollViewerApp/Strings/ko-KR/SearchPage/TagFilterSetEditor.resw
@@ -135,7 +135,7 @@
   <data name="Notification_Selected_TagFilterSets_Empty_Title" xml:space="preserve">
     <value>선택된 모든 태그 필터 모음들이 비어있습니다.</value>
   </data>
-  <data name="AutoSaveCheckBox_Content" xml:space="preserve">
+  <data name="AutoSaveCheckBox_Text" xml:space="preserve">
     <value>태그 필터 자동 저장</value>
   </data>
   <data name="PairedTFSSelector_Subtitle_Exclude" xml:space="preserve">
