--- a/HitomiScrollViewerApp/Strings/en-US/SharedResources.resw
+++ b/HitomiScrollViewerApp/Strings/en-US/SharedResources.resw
@@ -119,7 +119,6 @@
   </resheader>
   <data name="AppDisplayName" xml:space="preserve">
     <value>Hitomi Scroll Viewer</value>
-    <comment>WARNING: Do not translate nor add this string resource for other languages. It will cause an error in SyncManager.</comment>
   </data>
   <data name="Text_Cancel" xml:space="preserve">
     <value>Cancel</value>
@@ -142,23 +141,11 @@
   <data name="Text_No" xml:space="preserve">
     <value>No</value>
   </data>
-  <data name="Text_TagFilterSets" xml:space="preserve">
-    <value>Tag filter sets</value>
+  <data name="Text_TagFilters" xml:space="preserve">
+    <value>Tag filters</value>
   </data>
   <data name="Text_Page" xml:space="preserve">
     <value>Page</value>
-  </data>
-  <data name="ExampleTagFilterSet_1" xml:space="preserve">
-    <value>Tag: Full Color, Female: Very Long Hair</value>
-  </data>
-  <data name="ExampleTagFilterSet_2" xml:space="preserve">
-    <value>Female: Glasses, Male: Sole Male</value>
-  </data>
-  <data name="ExampleTagFilterSet_3" xml:space="preserve">
-    <value>Series: Naruto, Female: Big Breasts</value>
-  </data>
-  <data name="ExampleTagFilterSet_4" xml:space="preserve">
-    <value>Tag: Non-H</value>
   </data>
   <data name="Text_Exclude" xml:space="preserve">
     <value>Exlclude</value>
