--- a/HitomiScrollViewerApp/Strings/ko-KR/SearchPage/SyncContentDialog.resw
+++ b/HitomiScrollViewerApp/Strings/ko-KR/SearchPage/SyncContentDialog.resw
@@ -117,16 +117,70 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ExampleTagFilters_4" xml:space="preserve">
-    <value>태그: Non-H</value>
+  <data name="RadioButtons_4_TextBlock.Text" xml:space="preserve">
+    <value>갤러리들을 가져온 후 다운로드 할까요?</value>
   </data>
-  <data name="ExampleTagFilters_3" xml:space="preserve">
-    <value>시리즈: 나루토, 여성: 거유</value>
+  <data name="RadioButtons_2_1.Content" xml:space="preserve">
+    <value>덮어쓰기</value>
   </data>
-  <data name="ExampleTagFilters_1" xml:space="preserve">
-    <value>태그: 풀컬러, 여성: 긴 머리카락</value>
+  <data name="RadioButtons_2_2.Content" xml:space="preserve">
+    <value>추가하기</value>
   </data>
-  <data name="ExampleTagFilters_2" xml:space="preserve">
-    <value>여성: 안경, 남성: 1인 남성</value>
+  <data name="RadioButtons_2_TextBlock.Text" xml:space="preserve">
+    <value>태그 필터를 가져온 후 동기화 방법을 선택하세요</value>
+  </data>
+  <data name="RadioButtons_3_1.Content" xml:space="preserve">
+    <value>클라우드에서 가져온 태그 필터들로 교체하기</value>
+  </data>
+  <data name="RadioButtons_3_2.Content" xml:space="preserve">
+    <value>현재 기기에 저장되어 있는 태그 필터들을 유지하기</value>
+  </data>
+  <data name="RadioButtons_3_TextBlock.Text" xml:space="preserve">
+    <value>동일한 이름을 가진 태그 필터들을 동기화 할 방법을 선택하세요</value>
+  </data>
+  <data name="InfoBar_Error_FileNotUploaded_Message" xml:space="preserve">
+    <value>파일이 아직 업로드 되지 않았습니다.</value>
+  </data>
+  <data name="InfoBar_Error_Unauthorized_Message" xml:space="preserve">
+    <value>Google Drive에 액세스할 권한이 없습니다. 다시 로그인 후 액세스 권한을 부여해주세요.</value>
+  </data>
+  <data name="InfoBar_Error_Unknown_Message" xml:space="preserve">
+    <value>알 수 없는 오류가 발생했습니다. 잠시 뒤에 다시 시도해주세요.</value>
+  </data>
+  <data name="InfoBar_Fetch_Canceled_Message" xml:space="preserve">
+    <value>파일 가져오기가 취소되었습니다.</value>
+  </data>
+  <data name="InfoBar_Fetch_Success_Message" xml:space="preserve">
+    <value>파일을 성공적으로 가져왔습니다.</value>
+  </data>
+  <data name="InfoBar_Upload_Canceled_Message" xml:space="preserve">
+    <value>파일 업로드가 취소되었습니다.</value>
+  </data>
+  <data name="InfoBar_Upload_Success_Message" xml:space="preserve">
+    <value>파일이 성공적으로 업로드 되었습니다.</value>
+  </data>
+  <data name="SyncContentDialog.PrimaryButtonText" xml:space="preserve">
+    <value>동기화</value>
+  </data>
+  <data name="RadioButton_1_1.Content" xml:space="preserve">
+    <value>업로드</value>
+  </data>
+  <data name="RadioButton_1_2.Content" xml:space="preserve">
+    <value>가져오기</value>
+  </data>
+  <data name="TitleTextBlock.Text" xml:space="preserve">
+    <value>동기화 옵션을 선택하세요</value>
+  </data>
+  <data name="UploadWarningInfoBar.Message" xml:space="preserve">
+    <value>파일을 업로드하면 현재 클라우드에 동기화 되어있는 태그 필터 / 갤러리가 덮어씌워집니다.</value>
+  </data>
+  <data name="UploadWarningInfoBar.Title" xml:space="preserve">
+    <value>경고</value>
+  </data>
+  <data name="TFCheckBox.Content" xml:space="preserve">
+    <value>태그 필터</value>
+  </data>
+  <data name="GalleryCheckBox.Content" xml:space="preserve">
+    <value>갤러리</value>
   </data>
 </root>
