--- a/HitomiScrollViewerApp/Strings/en-US/SearchPage/DownloadItem.resw
+++ b/HitomiScrollViewerApp/Strings/en-US/SearchPage/DownloadItem.resw
@@ -120,9 +120,6 @@
   <data name="CancelBtn.ToolTipService.ToolTip" xml:space="preserve">
     <value>Cancel download</value>
   </data>
-  <data name="StatusText_CalculatingDownloadNumber" xml:space="preserve">
-    <value>Calculating the number of images to download...</value>
-  </data>
   <data name="StatusText_Downloading" xml:space="preserve">
     <value>Downloading...</value>
   </data>
@@ -165,5 +162,8 @@
   </data>
   <data name="ToolTipText_TryAgain" xml:space="preserve">
     <value>Try again</value>
+  </data>
+  <data name="StatusText_TooManyDownloadFails" xml:space="preserve">
+    <value>There were too many failed download attempts. Try again later.</value>
   </data>
 </root>
