--- a/HitomiScrollViewerApp/Strings/en-US/SharedResources.resw
+++ b/HitomiScrollViewerApp/Strings/en-US/SharedResources.resw
@@ -156,4 +156,10 @@
   <data name="Text_All" xml:space="preserve">
     <value>All</value>
   </data>
+  <data name="Text_Language" xml:space="preserve">
+    <value>Language</value>
+  </data>
+  <data name="Text_Type" xml:space="preserve">
+    <value>Type</value>
+  </data>
 </root>
