--- a/HitomiScrollViewerApp/Strings/ko-KR/ExampleTagFilterNames.resw
+++ b/HitomiScrollViewerApp/Strings/ko-KR/ExampleTagFilterNames.resw
@@ -117,16 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ExampleTagFilters_4" xml:space="preserve">
+  <data name="ExampleTagFilterName_4" xml:space="preserve">
     <value>태그: Non-H</value>
   </data>
-  <data name="ExampleTagFilters_3" xml:space="preserve">
+  <data name="ExampleTagFilterName_3" xml:space="preserve">
     <value>시리즈: 나루토, 여성: 거유</value>
   </data>
-  <data name="ExampleTagFilters_1" xml:space="preserve">
-    <value>태그: 풀컬러, 여성: 긴 머리카락</value>
+  <data name="ExampleTagFilterName_1" xml:space="preserve">
+    <value>태그: 풀컬러, 여성: 장발</value>
   </data>
-  <data name="ExampleTagFilters_2" xml:space="preserve">
+  <data name="ExampleTagFilterName_2" xml:space="preserve">
     <value>여성: 안경, 남성: 1인 남성</value>
   </data>
 </root>
