--- a/HitomiScrollViewerApp/Strings/ko-KR/MainWindow.resw
+++ b/HitomiScrollViewerApp/Strings/ko-KR/MainWindow.resw
@@ -120,4 +120,16 @@
   <data name="Text_DownloadRemaining" xml:space="preserve">
     <value>아직 다운로드 중인 갤러리가 남아있어요. 그래도 종료할까요?</value>
   </data>
+  <data name="SelectorBarItem_SearchPage.Text" xml:space="preserve">
+    <value>갤러리 검색 &amp; 다운로드</value>
+  </data>
+  <data name="SelectorBarItem_BrowsePage.Text" xml:space="preserve">
+    <value>갤러리 찾기</value>
+  </data>
+  <data name="SelectorBarItem_ViewPage.Text" xml:space="preserve">
+    <value>갤러리 보기</value>
+  </data>
+  <data name="SelectorBarItem_SettingsPage.Text" xml:space="preserve">
+    <value>설정</value>
+  </data>
 </root>
