--- a/HitomiScrollViewerApp/Strings/ko-KR/SyncContentDialog.resw
+++ b/HitomiScrollViewerApp/Strings/ko-KR/SyncContentDialog.resw
@@ -117,25 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="RadioButtons_4_TextBlock.Text" xml:space="preserve">
+  <data name="RadioButtons4TextBlock.Text" xml:space="preserve">
     <value>갤러리들을 가져온 후 다운로드 할까요?</value>
   </data>
-  <data name="RadioButtons_2_1.Content" xml:space="preserve">
+  <data name="RadioButtons2A.Content" xml:space="preserve">
     <value>덮어쓰기</value>
   </data>
-  <data name="RadioButtons_2_2.Content" xml:space="preserve">
+  <data name="RadioButtons2B.Content" xml:space="preserve">
     <value>추가하기</value>
   </data>
-  <data name="RadioButtons_2_TextBlock.Text" xml:space="preserve">
+  <data name="RadioButtons2TextBlock.Text" xml:space="preserve">
     <value>태그 필터를 가져온 후 동기화 방법을 선택하세요</value>
   </data>
-  <data name="RadioButtons_3_1.Content" xml:space="preserve">
+  <data name="RadioButtons3A.Content" xml:space="preserve">
     <value>클라우드에서 가져온 태그 필터들로 교체하기</value>
   </data>
-  <data name="RadioButtons_3_2.Content" xml:space="preserve">
+  <data name="RadioButtons3B.Content" xml:space="preserve">
     <value>현재 기기에 저장되어 있는 태그 필터들을 유지하기</value>
   </data>
-  <data name="RadioButtons_3_TextBlock.Text" xml:space="preserve">
+  <data name="RadioButtons3TextBlock.Text" xml:space="preserve">
     <value>동일한 이름을 가진 태그 필터들을 동기화 할 방법을 선택하세요</value>
   </data>
   <data name="InfoBar_Error_FileNotUploaded_Message" xml:space="preserve">
@@ -162,10 +162,10 @@
   <data name="SyncContentDialog.PrimaryButtonText" xml:space="preserve">
     <value>동기화</value>
   </data>
-  <data name="RadioButton_1_1.Content" xml:space="preserve">
+  <data name="RadioButton1A.Content" xml:space="preserve">
     <value>업로드</value>
   </data>
-  <data name="RadioButton_1_2.Content" xml:space="preserve">
+  <data name="RadioButton1B.Content" xml:space="preserve">
     <value>가져오기</value>
   </data>
   <data name="TitleTextBlock.Text" xml:space="preserve">
