--- a/HitomiScrollViewerApp/Strings/en-US/TagFilterEditor.resw
+++ b/HitomiScrollViewerApp/Strings/en-US/TagFilterEditor.resw
@@ -135,7 +135,7 @@
   <data name="Notification_Selected_TagFilterSets_Empty_Title" xml:space="preserve">
     <value>All of the selected tag filter sets are empty.</value>
   </data>
-  <data name="TFAutoSaveTextBlock.Text" xml:space="preserve">
+  <data name="TFAutoSaveToggleSwitch.Header" xml:space="preserve">
     <value>Auto Save</value>
   </data>
   <data name="PairedTFSSelector_Subtitle_Exclude" xml:space="preserve">
