--- a/HitomiScrollViewerApp/Strings/en-US/SearchPage.resw
+++ b/HitomiScrollViewerApp/Strings/en-US/SearchPage.resw
@@ -123,7 +123,7 @@
   <data name="HyperlinkCreateButtonTextBlock.Text" xml:space="preserve">
     <value>Create and copy search link</value>
   </data>
-  <data name="Notification_DownloadInputTextBox_Invalid_Title" xml:space="preserve">
+  <data name="Notification_InvalidInput" xml:space="preserve">
     <value>Invalid ID(s) or URL(s)</value>
   </data>
   <data name="TagFilterSelectionDescTextBlock.Text" xml:space="preserve">
@@ -131,5 +131,8 @@
   </data>
   <data name="Text_BookmarkNumPerPage" xml:space="preserve">
     <value>Bookmark per page</value>
+  </data>
+  <data name="Notification_DuplicateTags" xml:space="preserve">
+    <value>There are duplicate tags in the selected include/exclude tag filters.</value>
   </data>
 </root>
