--- a/HitomiScrollViewerApp/Strings/ko-KR/LoadProgressReporter.resw
+++ b/HitomiScrollViewerApp/Strings/ko-KR/LoadProgressReporter.resw
@@ -117,31 +117,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Text_InitialisingDatabase" xml:space="preserve">
+  <data name="InitialisingDatabase" xml:space="preserve">
     <value>데이터베이스를 초기 설정하는 중...</value>
   </data>
-  <data name="Text_AddingExampleTFSs" xml:space="preserve">
+  <data name="AddingExampleTFSs" xml:space="preserve">
     <value>예시 태그 필터 모음들을 생성하는 중...</value>
   </data>
-  <data name="Text_InitialisingApp" xml:space="preserve">
+  <data name="InitialisingApp" xml:space="preserve">
     <value>앱을 시작하는 중...</value>
   </data>
-  <data name="Text_LoadingDatabase" xml:space="preserve">
+  <data name="LoadingDatabase" xml:space="preserve">
     <value>데이터베이스를 불러오는 중...</value>
   </data>
-  <data name="Text_MigratingGalleries" xml:space="preserve">
+  <data name="MigratingGalleries" xml:space="preserve">
     <value>갤러리들을 이전하는 중...</value>
   </data>
-  <data name="Text_MigratingTFSs" xml:space="preserve">
+  <data name="MigratingTFSs" xml:space="preserve">
     <value>태그 필터 모음들을 이전하는 중...</value>
   </data>
-  <data name="Text_MovingImageFolder" xml:space="preserve">
+  <data name="MovingImageFolder" xml:space="preserve">
     <value>이미지 저장 폴더를 옮기는 중...</value>
   </data>
-  <data name="Text_PleaseWait" xml:space="preserve">
+  <data name="PleaseWait" xml:space="preserve">
     <value>모든 과정이 완료 될 때까지 기다려주세요.</value>
   </data>
-  <data name="Text_Title" xml:space="preserve">
+  <data name="RenamingImageFiles" xml:space="preserve">
+    <value>이미지 파일의 이름들을 변경하는 중...</value>
+  </data>
+  <data name="Title" xml:space="preserve">
     <value>로딩 중...</value>
   </data>
 </root>
