added 'all' text

--- a/HitomiScrollViewerApp/Strings/en-US/GalleryType.resw
+++ b/HitomiScrollViewerApp/Strings/en-US/GalleryType.resw
@@ -135,4 +135,7 @@
   <data name="Anime" xml:space="preserve">
     <value>Anime</value>
   </data>
+  <data name="All" xml:space="preserve">
+    <value>All</value>
+  </data>
 </root>
