--- a/HitomiScrollViewerApp/Strings/en-US/GallerySortProperty.resw
+++ b/HitomiScrollViewerApp/Strings/en-US/GallerySortProperty.resw
@@ -126,8 +126,8 @@
   <data name="Date" xml:space="preserve">
     <value>Upload Time</value>
   </data>
-  <data name="DownloadTime" xml:space="preserve">
-    <value>Download Time</value>
+  <data name="LastDownloadTime" xml:space="preserve">
+    <value>Last Download Time</value>
   </data>
   <data name="GalleryLanguage" xml:space="preserve">
     <value>Language</value>
